# optimization_algo

./: .gitignore  README.md  coverage_plot.py  examples.py  input.py  main.py  plots.py  pyproject.toml
src/: algo.py  coverage_plot.py  plots.py
tests/: test_optimization.py
